Fixed audio playback on iOS.

--- a/src/components/ScaleQuestion/ScaleQuestion.scss
+++ b/src/components/ScaleQuestion/ScaleQuestion.scss
@@ -85,15 +85,11 @@
         }
 
         &__actions {
-            @include grid(3, 1, 0);
+            @include grid(4, 1, 0);
             position: fixed;
             bottom: 1em;
             left: 0;
             width: 100%;
-        }
-
-        &__playButton {
-            display: none;
         }
 
         &__solution {
@@ -129,7 +125,6 @@
 
     @include breakpoint(desktop) {
         &__actions {
-            @include grid(4, 1, 0);
             display: block;
             position: relative;
             text-align: center;
